syntax = "proto3";

package helloworld;
option go_package = ".;helloworld";

service Greeter{
	rpc SayList (HelloRequest) returns (stream HelloReply) {};
}
message HelloRequest {
	string name = 1;
}

message HelloReply {
	string  message = 1;
}